Fix f7-list-input has y overflow due to added padding (#3403)

--- a/bundles/org.openhab.ui/web/src/css/app.styl
+++ b/bundles/org.openhab.ui/web/src/css/app.styl
@@ -54,6 +54,12 @@ html
   .searchbar-backdrop
     display none
 
+/* Fixes an adjustments for list input */
+.list
+  textarea
+    padding-top 0
+    padding-bottom 0
+
 /* Adjustments for iOS & Material Design themes */
 .ios
 .md
